--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>If you’re looking blank casvsettes on the we</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
